<resources>
    <string name="app_name">CoffeeShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Buttons -->
    <string name="btn_enter">Next</string>
    <string name="enter_phone">please enter phone number</string>
    <string name="enter_name">please enter name</string>
    <string name="lbl_type">Name</string>
    <string name="order_history">Order History</string>
    <string name="coffee">Coffee</string>
    <string name="place_order">Place Order</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="espresso_10">1 : ESPRESSO : $10</string>
    <string name="minus">-</string>
    <string name="initial_value">0</string>
    <string name="increase">+</string>
    <string name="cappucciano_20">2 : CAPPUCCINO : $20</string>
    <string name="latte_15">3 : Latte : $15</string>
    <string name="frappe_40">4 : Frappe : $40</string>
    <string name="lbl_add_note">Add Instruction for Items</string>
    <string name="_1_espresso_quantity">1. Espresso($10) : Quantity :</string>
    <string name="_1_cap_quantity">2. Cappuccino($20) : Quantity :</string>
    <string name="_1_late_quantity">3. Latte($15) : Quantity :</string>
    <string name="_1_frape_quantity">4 : Frappe($40) : Quantity :</string>
    <string name="note">Note For Cooking:</string>
    <string name="date">Date</string>
    <string name="total">Total :</string>
    <string name="_0">0</string>


</resources>