<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.orderscreen.OrderFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/bill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            app:layout_constraintVertical_chainStyle="spread_inside">

            <TextView
                android:id="@+id/tv_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coffee"
                android:textColor="#ED6135"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/lin_lay_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:orientation="horizontal"
                android:weightSum="12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_list">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/espresso_10"
                    android:textSize="@dimen/_18sdp"/>

                <Button
                    android:id="@+id/btn_decrease_1"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="2"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/minus" />

                <TextView
                    android:id="@+id/tv_score_espresso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:layout_weight="2"
                    android:text="@string/initial_value"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_18sdp" />

                <Button
                    android:id="@+id/btn_increase_1"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="2"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/increase" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_lay_1.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lin_lay_1">

                <RadioGroup
                    android:id="@+id/radio1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_70sdp"
                    android:layout_weight="8"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/small_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/small" />

                    <RadioButton
                        android:id="@+id/medium_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/medium" />

                    <RadioButton
                        android:id="@+id/large_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/large" />
                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_lay_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal"
                android:weightSum="12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lin_lay_1.1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/cappucciano_20"
                    android:textSize="@dimen/_18sdp"/>

                <Button
                    android:id="@+id/btn_decrease_2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="2"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/minus" />

                <TextView
                    android:id="@+id/tv_score_cappa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:layout_weight="2"
                    android:text="@string/initial_value"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_18sdp" />

                <Button
                    android:id="@+id/btn_increase_2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="2"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/increase" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_lay_2.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lin_lay_2">

                <RadioGroup
                    android:id="@+id/radio2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_70sdp"
                    android:layout_weight="8"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/small_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/small" />

                    <RadioButton
                        android:id="@+id/medium_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/medium" />

                    <RadioButton
                        android:id="@+id/large_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/large" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_lay_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal"
                android:weightSum="12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lin_lay_2.1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/latte_15"
                    android:textSize="@dimen/_18sdp">
                </TextView>

                <Button
                    android:id="@+id/btn_decrease_3"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="2"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/minus" />

                <TextView
                    android:id="@+id/tv_score_latte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:layout_weight="2"
                    android:text="@string/initial_value"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_18sdp" />

                <Button
                    android:id="@+id/btn_increase_3"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="2"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/increase" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_lay_3.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lin_lay_3">

                <RadioGroup
                    android:id="@+id/radio3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_70sdp"
                    android:layout_weight="8"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/small_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/small" />

                    <RadioButton
                        android:id="@+id/medium_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/medium" />

                    <RadioButton
                        android:id="@+id/large_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/large" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_lay_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal"
                android:weightSum="12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lin_lay_3.1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/frappe_40"
                    android:textSize="@dimen/_18sdp"/>

                <Button
                    android:id="@+id/btn_decrease_4"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="2"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/minus" />

                <TextView
                    android:id="@+id/tv_score_frappe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:layout_weight="2"
                    android:text="@string/initial_value"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_18sdp" />

                <Button
                    android:id="@+id/btn_increase_4"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="2"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/increase" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_lay_4.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lin_lay_4">

                <RadioGroup
                    android:id="@+id/radio4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_70sdp"
                    android:layout_weight="8"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/small_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/small" />

                    <RadioButton
                        android:id="@+id/medium_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/medium" />

                    <RadioButton
                        android:id="@+id/large_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/large" />
                </RadioGroup>

            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_instructon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_18sdp"
                android:hint="@string/lbl_add_note"
                app:hintTextColor="@color/blue_grey_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lin_lay_4.1">

                <EditText
                    android:id="@+id/et_add_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:textColor="@color/grey_900"
                    android:textSize="@dimen/_15sdp" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <TextView
        android:id="@+id/bill"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="8dp"
        android:minLines="5"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/btn_place_order"
        tools:layout_editor_absoluteX="10dp" />

    <Button
        android:id="@+id/btn_place_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="16dp"
        android:text="@string/place_order"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>